# ai-playground-frontend

./: .eslintrc.js  .eslintrc.json  .gitignore  CURSOR_MEMORY.md  README.md  dev.sh  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
api/: chat.py  index.py  mcp_agent.py
app/: Web3Providers.tsx  globals.css  layout.tsx  page.tsx
app/api/chat/: auth.ts  route.ts
app/api/interrupt/confirm/: route.ts
app/api/transaction/: route.ts
components/: background-canvas.tsx  chat-ui.tsx  chat-window.tsx  connect-wallet-button.tsx  copy-button.tsx  header.tsx  mcp-server-selector.tsx  shader-background.tsx  stats-panel.tsx  story-protocol-connector.tsx  tools-panel.tsx  transaction-table.tsx
hooks/: use-mouse-position.ts  use-mouse.ts
lib/: chat-utils.ts
lib/context/: StoryContext.tsx
utils/: conversation.ts  format-date.ts  format-number.ts
