[project]
name = "mcp-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "mcp[cli]>=1.3.0",
    "requests>=2.32.3",
    "web3>=7.8.0",
]
